--- a/jgr-r/src/main/JGR/NEWS
+++ b/jgr-r/src/main/JGR/NEWS
@@ -1,7 +1,7 @@
 Change Log
 
-1.8-1   (under development)
-    o   ...
+1.8-1   (2017-09-20)
+    o   fixed some more NOTEs
 
 1.8-0   (2017-09-20)
     o   moved to http://github.com/markush81/JGR
