--- a/jgr-r/src/main/JGR/NEWS
+++ b/jgr-r/src/main/JGR/NEWS
@@ -1,5 +1,8 @@
 Change Log
 
+1.8-4   (2017-09-24)
+    o   fixed JAR content for Windows
+
 1.8-3   (2017-09-22)
     o   found a way around last CRAN Warning
 
