--- a/jgr-r/src/main/JGR/NEWS
+++ b/jgr-r/src/main/JGR/NEWS
@@ -1,6 +1,6 @@
 Change Log
 
-1.8-7   (2018-09-30)
+1.9-x   (development)
     o   adapted to be compatible with JDK 1.9 (prior JDKs are not supported anymore)
 
 1.8-6   (2018-07-11)
