--- a/jgr-r/src/main/JGR/NEWS
+++ b/jgr-r/src/main/JGR/NEWS
@@ -1,5 +1,8 @@
 Change Log
 
+1.9-0   (2021-12-30)
+    o   Require JDK > 1.8
+
 1.8-7   (2020-04-08)
     o   updated dependent packages rJava
     o   compile against Java 1.6
